# beamline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  integrators.py  pyproject.toml  simulate_absorber.py  simulate_two_disks.py  symplectic_integrator_3body.ipynb
src/beamline/: bessel.py  integrators.py  multipole.py  pillbox.py  solenoid.py  solve_ivp.py  stencils.py  units.py
src/beamline/jax/: __init__.py  bessel.py  coordinates.py  elliptic.py  emfield.py  geometry.py  integrators.py  kinematics.py  manifold.py  pillbox.py  stencils.py  types.py
src/beamline/jax/absorber/: __init__.py  absorber.py  material.py  scattering.py  straggling.py  volume.py
src/beamline/jax/export/: usd.py
src/beamline/jax/integrate/: __init__.py  hamiltonian.py  propagate.py  stepsize.py  stochastic.py
src/beamline/jax/magnet/: __init__.py  loop.py  solenoid.py
src/beamline/jax/rfcavity/: pillbox.py
src/beamline/numpy/: bessel.py  convolve.py  elliptic.py  emfield.py  integrate.py  kinematics.py  material.py  multipole.py  pillbox.py  solenoid.py
src/diff_random/distributions/: __init__.py  _discrete.py  _distribution_base.py  _landau.py  _multichannel_landau.py
src/diff_random/mfmc/: __init__.py  _dual_fidelity_monte_carlo.py
test/: conftest.py  dist_stats.py  test_units.py
test/jax/: conftest.py  test_bessel.py  test_cooling_benchmarks.py  test_coordinates.py  test_elliptic.py  test_emfield.py  test_geometry.py  test_landau_peak.py  test_landau_peak_sampler_only.py  test_manifold.py  test_pillbox.py  test_stencils.py  test_stochastic.py  test_usd_export.py
test/jax/absorber/: test_absorber.py  test_straggling.py  test_two_disks.py  test_volume.py
test/jax/diff_random/: landau.ipynb  landau_multichannel.ipynb
test/jax/integrate/: test_stochastic.py  test_transform_material.py
test/jax/magnet/: test_solenoid.py
test/numpy/: test_benchmarks.py  test_kinematics.py  test_numpy_bessel.py  test_numpy_pillbox.py  test_numpy_solenoid.py  test_pillbox.py  test_solenoid.py
