[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "beamline"
authors = [{ name = "Nick Smith", email = "nick.smith@cern.ch" }]
description = "A beamline simulator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "scipy",
  "hepunits>=2.4.1",
  "pint",
  "matplotlib",
  "vector",
  "optree",
]

[project.optional-dependencies]
jax = ["jax", "diffrax", "equinox", "jaxtyping"]

[dependency-groups]
test = ["pytest >=6", "pytest-cov >=3", "ruff>=0.14.9", "pytest-benchmark"]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]
dev = ["beamline[jax]", "ipykernel", { include-group = "test" }]

[project.urls]
Homepage = "https://github.com/nsmith-/beamline"
"Bug Tracker" = "https://github.com/nsmith-/beamline/issues"
Discussions = "https://github.com/nsmith-/beamline/discussions"
Changelog = "https://github.com/nsmith-/beamline/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/beamline/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "C4",  # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]
ignore = [
  "PLR09",   # Too many X
  "PLR2004", # Magic values
  "ISC001",  # Conflicts with formatter
  "SIM300",  # yoda is dumb
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "T20",  # print statements in notebooks are fine
  "I001", # isort issues in notebooks are fine
]
